--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "bulma": "^0.9.3",
     "classnames": "^2.3.1",
-    "next": "12.0.1",
+    "next": "14.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint-config-next": "11.1.0",
+    "gh-pages": "^6.1.0"
   }
 }
