--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "classnames": "^2.3.1",
     "next": "14.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "swr": "^1.0.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
